--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,4 +29,8 @@ body {
     padding: 12px 20px 12px 40px; /* Add some padding */
     border: 1px solid #ddd; /* Add a grey border */
     margin-bottom: 12px; /* Add some space below the input */
-  }
+}
+
+.tinyFont {
+    font-size: small;
+}
